[gd_scene load_steps=3 format=3 uid="uid://bb8s77rbjg0i2"]

[ext_resource type="Theme" uid="uid://2dip1rniy10o" path="res://activitytheme.tres" id="1_n0cin"]
[ext_resource type="Script" path="res://activity.gd" id="1_qufu8"]

[node name="Activity" type="Control"]
layout_mode = 3
anchor_right = 0.179
anchor_bottom = 0.389
offset_right = 0.0799942
offset_bottom = -0.0300064
script = ExtResource("1_qufu8")
metadata/_edit_use_anchors_ = true

[node name="selectActivity" type="Button" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme = ExtResource("1_n0cin")
text = "???"

[node name="activityList" type="PopupMenu" parent="."]
size = Vector2i(86, 96)
theme = ExtResource("1_n0cin")
item_count = 4
item_0/text = "Hunt"
item_1/text = "Open Cafe"
item_1/id = 1
item_2/text = "Shop"
item_2/id = 2
item_3/text = "Rest"
item_3/id = 3

[connection signal="pressed" from="selectActivity" to="." method="_on_select_activity_pressed"]
[connection signal="focus_exited" from="activityList" to="." method="_on_activity_list_focus_exited"]
[connection signal="index_pressed" from="activityList" to="." method="_on_activity_list_index_pressed"]
